--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-MONGODB_URI=mongodb+srv://yakup:yakup12345@cluster0.8mzenwv.mongodb.net/food-order?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://admin:admin12345@cluster0.8mzenwv.mongodb.net/food-order?retryWrites=true&w=majority
 
-GITHUB_ID=b542801493c72dc07b8e
-GITHUB_SECRET=eeeb699e0d40aab484c978f7c0a236a45b4025b0
+GITHUB_ID=
+GITHUB_SECRET=
 
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=123456
 
-ADMIN_TOKEN=SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+ADMIN_TOKEN=
