--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MONGODB_URI=mongodb+srv://yakup:yakup12345@cluster0.8mzenwv.mongodb.net/food-ord
 GITHUB_ID=b542801493c72dc07b8e
 GITHUB_SECRET=eeeb699e0d40aab484c978f7c0a236a45b4025b0
 
-NEXT_PUBLIC_API_URL=https://walrus-app-axoky.ondigitalocean.app/api
+NEXT_PUBLIC_API_URL=https://orderfood-nextjs.vercel.app/api
 
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=123456
