--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+MONGODB_URI=url
 
+GITHUB_ID=aaaaaa
+GITHUB_SECRET=aaaaaaa
+
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
+
+ADMIN_USERNAME=aaaaaaa
+ADMIN_PASSWORD=aaaaaaa
+
+ADMIN_TOKEN=aaaaaa
